--- a/css/intro-practice.css
+++ b/css/intro-practice.css
@@ -4,3 +4,22 @@ h1.practice-header {
 	color: blue;
 	background-color: green;
 }
+
+div.moving-box {
+	width: 100px;
+	height: 100px;
+	background: red;
+	position: relative;
+	animation:mymove 5s infinite;
+	-webkit-animation:mymove 5s infinite;
+}
+
+@keyframes mymove {
+	from {left:0px;}
+	to {left:200px;}
+}
+
+@-webkit-keyframes mymove {
+	from {left:0px;}
+	to {left:200px;}
+}
